--- a/Proyecto1/blogpost.html
+++ b/Proyecto1/blogpost.html
@@ -7,7 +7,7 @@
     <p>Y este es el parrafo de inicio</p>
     <body>
         <div id="container">
-            <div id="cabecera">cabecera</div>
+            <div id="cabecera">Hyperblog </div>
             <div id="post">
                 <h1>Esto es el titulo atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio---</p>
