--- a/Proyecto1/blogpost.html
+++ b/Proyecto1/blogpost.html
@@ -10,6 +10,7 @@
             <div id="post">
                 <h1>Esto es el titulo atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio---</p>
+                <p>PARRAFO AÑADIDO</p>
             </div>
         </div>
     </body>
